// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfilePicture matches snapshot when no props are passed. 1`] = `
<img
  className="img-fluid"
  style={
    Object {
      "border": "solid #999 5px",
      "borderRadius": 5,
      "marginBottom": 10,
      "marginRight": 10,
    }
  }
/>
`;

exports[`ProfilePicture matches snapshot when props are passed 1`] = `
<img
  className="img-fluid"
  src="/hereisanad"
  style={
    Object {
      "border": "solid #999 5px",
      "borderRadius": 5,
      "marginBottom": 10,
      "marginRight": 10,
    }
  }
/>
`;
